# OTTO-sample-manager

./: .gitignore  AUDIT.md  CHANGELOG.md  LICENSE  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  todolist.md  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.tauri.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: publish-windows.yml  tauri-windows.yml
docs/: tauri-migration-acceptance.md
docs/update/: latest.json
electron/: updateTypes.ts
electron/main/: copyManager.ts  copyMigration.test.ts  copyMigration.ts  electronBuilderConfig.test.ts  fileInfo.test.ts  fileInfo.ts  folderScanner.test.ts  folderScanner.ts  index.ts  windowPlacement.test.ts  windowPlacement.ts
electron/preload/: index.ts
resources/: installer.nsh
scripts/: verify-tauri-release.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: library_benchmark.rs
src-tauri/keys/: README.md  otto-updater.key.pub
src-tauri/src/: audio_metadata.rs  audio_protocol.rs  commands.rs  copy_manager.rs  import_pipeline.rs  lib.rs  library_db.rs  lyrics_files.rs  main.rs  native_drag.rs  waveform_cache.rs
src-tauri/tests/: audio_metadata.rs  copy_manager.rs  import_pipeline.rs  library_db.rs  lyrics_files.rs  native_drag.rs  waveform_cache.rs
src/components/: ContextMenu.test.tsx  ContextMenu.tsx  FolderItem.tsx  GroupBar.tsx  ImportResultBanner.tsx  (+4 more)
(+41 files in other folders)
